terraform-broken/03-vpc-endpoints.tf
# VPC Endpoints for ECS Container Image Operations
# Creates ECR endpoints for container image access from private subnets

# ECR API Interface Endpoint - For ECR API calls
resource "aws_vpc_endpoint" "ecr_api" {
  vpc_id              = data.aws_vpc.main.id
  service_name        = "com.amazonaws.us-west-2.ecr.api"
  vpc_endpoint_type   = "Interface"
  subnet_ids          = data.aws_subnets.private.ids
  security_group_ids  = [data.aws_security_group.app.id]
  
  private_dns_enabled = true

  tags = {
    Name         = "${var.PrefixCode}-vpce-ecr-api"
    resourcetype = "network"
    codeblock    = "vpcendpoints"
  }
}

# ECR DKR Interface Endpoint - For Docker registry operations
resource "aws_vpc_endpoint" "ecr_dkr" {
  vpc_id              = data.aws_vpc.main.id
  service_name        = "com.amazonaws.us-west-2.ecr.dkr"
  vpc_endpoint_type   = "Interface"
  subnet_ids          = data.aws_subnets.private.ids
  security_group_ids  = [data.aws_security_group.app.id]
  
  private_dns_enabled = true

  tags = {
    Name         = "${var.PrefixCode}-vpce-ecr-dkr"
    resourcetype = "network"
    codeblock    = "vpcendpoints"
  }
}
